--- a/maps_r/coastal.Rmd
+++ b/maps_r/coastal.Rmd
@@ -14,14 +14,16 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-library(leaflet)
+library(tmap)
+library(sf)
 
-# Create a map widget by calling leaflet()
-m <- leaflet() %>%
-     # Add a tile layer (base map)
-     addTiles() %>%  
-       # Set the view to a location
-       setView(lng = -71.0589, lat = 42.3601, zoom = 12)
+lsoa_dover_geojson_fn <- "../../data/lsoa_boundaries_dover_2011.geojson"
+dover_sf <- st_read(lsoa_dover_geojson_fn)
 
-m  # Print the map
+tmap_options(max.categories=100)
+tmap_mode("view") 
+
+tmap_map <- tm_basemap("OpenStreetMap") +
+       tm_shape(dover_sf) + 
+       tm_polygons("LSOA11CD",alpha=0.5,legend.show=F)
 ```
