added some stuff

--- a/maps_r/coastal.bib
+++ b/maps_r/coastal.bib
@@ -125,9 +125,9 @@
   shorttitle = {Diffusion {{Tubes}} for {{Ambient NO2 Monitoring}}: {{Practical Guidance}} for {{Laboratories}} and  {{Users}}},
   author = {{AEA Technology Plc}},
   date = {2008-02},
-  publisher = {{Department for Environment Food \& Rural Affairs}},
   url = {https://laqm.defra.gov.uk/documents/0802141004_NO2_WG_PracticalGuidance_Issue1a.pdf},
-  urldate = {2019-06-03}
+  urldate = {2019-06-03},
+  organization = {{Department for Environment Food \& Rural Affairs}}
 }
 
 @report{aecomLondonBoroughLewisham2012,
@@ -788,8 +788,8 @@
 @misc{ChristchurchEastDorset2014,
   title = {Christchurch and {{East Dorset Local Plan Policies Map}} - {{Local Plan Part}} 1 - {{Core Strategy Adoption}} - {{Wimborne Minster}} and {{Colehill Inset}}},
   date = {2014-04},
-  publisher = {{Dorset Council}},
-  url = {https://www.dorsetcouncil.gov.uk/planning-buildings-land/planning-policy/east-dorset/local-development-framework/pdfs/policies-map/wimborne-and-colehill-inset.pdf}
+  url = {https://www.dorsetcouncil.gov.uk/planning-buildings-land/planning-policy/east-dorset/local-development-framework/pdfs/policies-map/wimborne-and-colehill-inset.pdf},
+  organization = {{Dorset Council}}
 }
 
 @article{ciprianiDangerAirAir2018,
@@ -1362,9 +1362,9 @@
 @misc{DiffusionTubeBias2018,
   title = {Diffusion {{Tube Bias Adjustment Factors Spreadsheet}}},
   date = {2018-09},
-  publisher = {{Department for Environment Food \& Rural Affairs}},
   url = {https://laqm.defra.gov.uk/assets/databasediffusiontubebiasfactorsv0918final.xlsx},
-  urldate = {2019-06-03}
+  urldate = {2019-06-03},
+  organization = {{Department for Environment Food \& Rural Affairs}}
 }
 
 @article{dissanayakeBallChainGlobal2012,
@@ -3232,9 +3232,9 @@
   title = {Methodology Used in the {{Survey}} of {{Diffusion Tube Collocation Studies}}},
   author = {, Air Quality Consultants},
   date = {2006-03},
-  publisher = {{Department for Environment Food \& Rural Affairs}},
   url = {https://laqm.defra.gov.uk/documents/NO2-Diffusion-Tube-Collocation-Methodology.pdf},
-  urldate = {2019-06-03}
+  urldate = {2019-06-03},
+  organization = {{Department for Environment Food \& Rural Affairs}}
 }
 
 @article{michaelsIncidenceApparentHealth2000,
@@ -3558,20 +3558,36 @@
   url = {https://laqm.defra.gov.uk/review-and-assessment/tools/background-maps.html#NOxNO2calc}
 }
 
-@dataset{OrdnanceSurvey2023,
-  title = {{{OS Open Names}}},
-  author = {{Ordnance Survey}},
-  date = {2023-07},
-  url = {https://osdatahub.os.uk/downloads/open/OpenNames},
-  urldate = {2023-09-06}
-}
-
 @online{ordnancesurveyAddressBaseCore2021,
   title = {{{AddressBase Core}}},
   author = {{Ordnance Survey}},
   date = {2021-10-06},
   url = {https://www.ordnancesurvey.co.uk/business-government/products/addressbase-core},
   urldate = {2021-10-06}
+}
+
+@misc{OrdnanceSurveyGB2019,
+  title = {{{OS Open Names}} - {{User Guide}} v2.1},
+  author = {{Ordnance Survey GB}},
+  date = {2019-10-01},
+  url = {https://www.ordnancesurvey.co.uk/documents/product-support/user-guide/os-open-names-user-guide.pdf},
+  urldate = {2023-09-11}
+}
+
+@dataset{OrdnanceSurveyGB2023,
+  title = {{{OS Open Names}}},
+  author = {{Ordnance Survey GB}},
+  date = {2023-07},
+  url = {https://osdatahub.os.uk/downloads/open/OpenNames},
+  urldate = {2023-09-06}
+}
+
+@misc{OrdnanceSurveyGB2023a,
+  title = {{{OS OPEN NAMES}}™ – {{TECHNICAL SPECIFICATION}} - {{V2}}.2},
+  author = {{Ordnance Survey GB}},
+  date = {2023-01},
+  url = {OS OPEN NAMES™ – TECHNICAL SPECIFICATION},
+  urldate = {2023-09-11}
 }
 
 @online{ordnancesurveyOSOpenMapLocal2022,
@@ -3708,8 +3724,8 @@
 @misc{PooleLocalPlan2018,
   title = {Poole {{Local Plan Policies Map}} 2018},
   date = {2018-11},
-  publisher = {{Borough of Poole}},
-  url = {https://www.poole.gov.uk/_resources/assets/attachment/full/0/49513.pdf}
+  url = {https://www.poole.gov.uk/_resources/assets/attachment/full/0/49513.pdf},
+  organization = {{Borough of Poole}}
 }
 
 @inproceedings{porterApproximateStringComparison1997,
