--- a/maps_r/whatsaplace.Rmd
+++ b/maps_r/whatsaplace.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "What is a coastal town?"
 output:
-   bookdown::html_document2:
+   bookdown::pdf_document2:
       toc: true
       toc_float:
          collapsed: false
@@ -10,12 +10,56 @@ output:
 bibliography: coastal.bib
 csl: ieee-with-url.csl
 link-citations: true
+header-includes:
+   - \usepackage{booktabs}
+   - \usepackage{amsmath}
+   - \DeclareRobustCommand{\NO2}{NO$_2$}
+   - \PassOptionsToPackage{table}{xcolor}
+   - \usepackage{colortbl}
+   - \definecolor{pastelred}{rgb}{1.0, 0.5, 0.5}
+   - \definecolor{pastelgreen}{rgb}{0.6, 1.0, 0.6}
+   - \usepackage{float}
+   - \usepackage{url}
+   - \usepackage{hyperref}
+   - \hypersetup{breaklinks=true}
+   - \usepackage{caption}
 ---
 
-What is a coastal town? It sounds like a simple question to answer and probably one which conjours up specific place names in the mind of the reader: St Ives, Scarborough, Witby, Portree, Herne Bay, etc. But what can a place name tell us about a town? Let us consider Herne Bay in Kent as an example as it serves to illustrate the hidden complexity underlying this seemingly simple question.
+# What is a coastal town?
 
-Ordnance Survey maintains a list of place names in a product called "OS Open Names" [@OrdnanceSurvey2023] which is free to use.
+What is a coastal town? It sounds like a simple question to answer and probably one which brings to mind specific places: St Ives, Scarborough, Witby, Portree, Herne Bay, etc. But what can a place name tell us? 
 
-But what can we really learn about a place solely from its name? Whatever is recorded in association with that name.
+If we want to answer research questions a name is not enough: we need information associated with each name in order to look for differences in that information between different entities or groups of entities. How can we determine, for example, what the mortality rate from diabetes is in "coastal towns" or in "inland towns"? Where would this information come from, and at what level has it been recorded? Is the mortality rate recorded per town or is it recorded at a lower or higher spatial resolution in some other dataset? How can we associate this information with a given place name if that is the case? 
 
-# References
+These are the questions which prompt us to take the problem seriously and so let us consider Herne Bay in Kent as an example of a Coastal Town and explore the hidden complexity underlying this seemingly simple question "What is a coastal town?".
+
+# The names of places
+
+Ordnance Survey maintains a list of place names in a product called "OS Open Names" [@OrdnanceSurveyGB2023] which is free to use for research purposes. The dataset is split into cities, towns, villages, hamlets, other settlements, and suburban areas. The technical specification for the product [@OrdnanceSurveyGB2023a] provides the following definition for town within the product:
+
+> A centre of business and population with an area in excess of 2.5 square kilometres. Some smaller places are also historically considered towns, for example, where they are market or former county towns.
+
+This raises the question, how is the area determined? The technical specification does not provide a direct answer but page 4 of [@OrdnanceSurveyGB2023a] states:
+
+> Settlements are sourced from an internal OS data store. For LocalType City and Town, the geometry supplied is the notional centre of the settlement (the position that the majority of informed people would accept as being the 'centre' of the settlement) and the position has been manually captured. 
+>
+> For all other settlement types, the position has been generated from the major road junction within the settlement, using OS MasterMap Highways Network.
+
+It would appear that town's centre is something manually determined by humans at Ordnance Survey, but how the area is ascertained is not clear.
+
+Figure \@ref(fig:seTowns) shows the settlements defined as towns located in the southeast of England. Herne Bay is shown in the top middle of the figure.
+
+```{r seTowns,echo=F,fig.cap="Towns in the southeast of England as defined by Ordnance Survey",out.width='80%',fig.align="center",fig.pos='H'}
+knitr::include_graphics("figures/se_towns.png")
+```
+
+# Extent of Herne Bay
+
+We have a definition of a town but the only information we have associated to it is a centroid, defined manually by Ordnance Survey. Cleary a town is not just a centroid, it has an extent. How can we capture this extent? Let us examine Herne Bay in closer detail.
+
+Figure \@ref(fig:hbClose) zooms in on Herne Bay.
+
+```{r hbClose,echo=F,fig.cap="Herne Bay, a coastal town in the southeast of England",out.width='80%',fig.align="center",fig.pos='H'}
+knitr::include_graphics("figures/hb_close.png")
+```
+From the figure are we to assume that "Herne Bay" is the small area between Oxenden and Mickleburgh Hill? We know from the OS Open Places definition that the area of a town must be at least 2.5 square kilometers, but the area between Oxenden and Mickleburgh Hill is approximately 0.75 square kilometers so this cannot be correct. We can see that Herne Bay constitutes a continous built-up area extending from Studd Hill to Bishopstone along the coast. We know that it is at-least 2.5 square kilometers, but we do not know the shape or total extent of the town as this information has not been provided.
