--- a/maps_r/datasources.Rmd
+++ b/maps_r/datasources.Rmd
@@ -8,3 +8,6 @@ https://www.data.gov.uk/dataset/4949c88e-89b7-49b5-a0cf-8a3a2a4dac9d/os-open-nam
 http://www.diva-gis.org/gdata
 
 Admin areas
+
+# boundary-line
+https://osdatahub.os.uk/downloads/open/BoundaryLine
