Added extraction data

--- a/maps_r/coastal.bib
+++ b/maps_r/coastal.bib
@@ -3558,6 +3558,30 @@
   url = {https://laqm.defra.gov.uk/review-and-assessment/tools/background-maps.html#NOxNO2calc}
 }
 
+@online{OfficeforNationalStatistics2011,
+  title = {Census 2011 {{Geographies}}},
+  author = {{Office for National Statistics}},
+  date = {2011},
+  url = {https://www.ons.gov.uk/methodology/geography/ukgeographies/censusgeographies/2011censusgeographies},
+  urldate = {2023-09-18}
+}
+
+@online{OfficeforNationalStatistics2011a,
+  title = {Built-up {{Area Sub Divisions}} ({{December}} 2011) {{Boundaries}}},
+  author = {{Office for National Statistics}},
+  date = {2011},
+  url = {https://www.data.gov.uk/dataset/15e3be7f-66ed-416c-b0f2-241e87668642/built-up-areas-december-2011-boundaries-v2},
+  urldate = {2023-09-18}
+}
+
+@online{OfficeforNationalStatistics2021,
+  title = {Census 2021 {{Geographies}}},
+  author = {{Office for National Statistics}},
+  date = {2021},
+  url = {https://www.ons.gov.uk/methodology/geography/ukgeographies/censusgeographies/census2021geographies},
+  urldate = {2023-09-18}
+}
+
 @online{ordnancesurveyAddressBaseCore2021,
   title = {{{AddressBase Core}}},
   author = {{Ordnance Survey}},
@@ -3596,6 +3620,14 @@
   date = {2023},
   url = {https://osdatahub.os.uk/downloads/open/BoundaryLine},
   urldate = {2023-09-11}
+}
+
+@online{OrdnanceSurveyGB2023c,
+  title = {{{AddressBase}}},
+  author = {{Ordnance Survey GB}},
+  date = {2023},
+  url = {https://www.ordnancesurvey.co.uk/products/addressbase},
+  urldate = {2023-09-18}
 }
 
 @online{ordnancesurveyOSOpenMapLocal2022,
@@ -4760,6 +4792,10 @@
   pages = {575--610},
   doi = {10.1086/691686},
   abstract = {Lead is a neurotoxin with developmentally harmful effects in children. In the United States, over half the current flow of lead into the atmosphere is attribut- able to lead-formulated aviation gasoline (avgas), used in a large fraction of piston- engine aircraft. Various public interest firms have petitioned the EPA to find endan- germent from and regulate lead emitted by piston-engine aircraft, though the EPA has so far ruled against such petitions. To address an EPA request for more evidence, we construct a novel data set that links time and spatially referenced blood lead data from over a million children to 448 nearby airports in Michigan. Across a series of tests, and adjusting for other known sources of lead exposure, we find that child blood lead levels (1) increase dose-responsively in proximity to airports, (2) decline measurably among children sampled in the months after 9/11, (3) increase dose- responsively in the flow of piston-engine aircraft traffic, (4) increase in the percentage of prevailing wind days drifting in the direction of a child’s residential location, and (5) behave intuitively and significantly when considering two-way and three-way in- teractions of our main treatment variables. To quantify the policy relevance of the results we provide a conservative estimate of the social damages attributable to avgas consumption. Damages are at least \$10 per gallon, which can be compared to a pump price of about \$6 per gallon.}
+}
+
+@patent{zotero-676,
+  type = {patent}
 }
 
 @article{zuurbierCommutersExposureParticulate2010,
