Functions to plot hb lsoa along with bua

--- a/maps_r/coastal.bib
+++ b/maps_r/coastal.bib
@@ -3570,7 +3570,7 @@
   title = {Built-up {{Area Sub Divisions}} ({{December}} 2011) {{Boundaries}}},
   author = {{Office for National Statistics}},
   date = {2011},
-  url = {https://www.data.gov.uk/dataset/15e3be7f-66ed-416c-b0f2-241e87668642/built-up-areas-december-2011-boundaries-v2},
+  url = {https://geoportal.statistics.gov.uk/datasets/ons::built-up-area-sub-divisions-dec-2011-boundaries/explore},
   urldate = {2023-09-18}
 }
 
